test/good/automatic/base/without_input/ret_zero/0029.lat
// official test 7

// declaration and initialization in same statement

int main() {
 int x = 7;
 printInt(x);
 return 0 ;

}