test/bad/automatic/base/compile_time/0023.lat
int main () {
 string x = 1;
 return 0 ;
}